# grpc-server

./: .gitignore  CMakeLists.txt  README.md
proto/: greeter.proto
src/: main.cpp
src/interfaces/: IGreeterService.h  ILogger.h
src/logger/: ConsoleLogger.cpp  ConsoleLogger.h
src/server/: ServerBuilder.cpp  ServerBuilder.h  ServiceRegistry.cpp  ServiceRegistry.h
src/services/: GreeterServiceImpl.cpp  GreeterServiceImpl.h
